--- a/index.html
+++ b/index.html
@@ -4,105 +4,38 @@
 <head>
 
 
-<script async custom-element="amp-auto-ads"
-        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-</script>
 
 
-    
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Propose ♥️</title>
     <link rel="shortcut icon" href="https://crush143-com.web.app/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
-<centre>
-<script class="centre" type="text/javascript">
-	atOptions = {
-		'key' : 'd26c3131198bb32572f152ae4451894d',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformat.com/d26c3131198bb32572f152ae4451894d/invoke.js"></scr' + 'ipt>');
-</script>
-  </div>
-    <div class="container">
-        <h1>Will you be my Chini ?🥺</h1>
-        <img src="https://crush143-com.web.app/cat.gif" alt="">
-        <div class="button">=
-            <button class="btn-yes" onclick="whyNot()">YES🥹</button>
-            <button class="btn-no">    NO💔             </button>
+    <centre>
+
         </div>
-    </div>
+        <div class="container">
+            <h1>Will you be my Chini ?🥺</h1>
+            <img src="https://crush143-com.web.app/cat.gif" alt="">
+            <div class="button">=
+                <button class="btn-yes" onclick="whyNot()">YES🥹</button>
+                <button class="btn-no"> NO💔 </button>
+            </div>
+        </div>
 
-    <script>
-
-        function whyNot() {
-            alert("Yey thankyou, Love you❤.Then msg me 'Yes'")
-}        let n = document.querySelector('.btn-no')
-        n.addEventListener('mouseover', movebtn)
-
-        function movebtn() {
-            const i = Math.floor(Math.random() * 500) + 1;
-            const j = Math.floor(Math.random() * 500) + 1;
-
-            n.style.left = i + 'px';
-            n.style.top = j + 'px';
+        <script src="script.js"></script>
 
 
-        }
-    </script>
 
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-ef+6k-30-ac+ty"
-     data-ad-client="ca-pub-3279473081670891"
-     data-ad-slot="5770585867"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<amp-auto-ads type="adsense"
-        data-ad-client="ca-pub-3279473081670891">
-</amp-auto-ads>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
-<script  type="text/javascript">
-	atOptions = {
-		'key' : '7bdd47a6fd5c1f184d4794334a4e0cbb',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformat.com/7bdd47a6fd5c1f184d4794334a4e0cbb/invoke.js"></scr' + 'ipt>');
-</script>
-</center>
+    </centre>
 </body>
 
 </html>
